istio-destination-rules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: account-destination
spec:
  host: account-web
  subsets:
  - name: v1
    labels:
      version: v1
