istio-vs-account.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: account-vs
spec:
  hosts:
    - "account.dev"
  gateways:
    - gateway
  http:
  - route:
    - destination:
        host: account-web # interpreted as account-web.default.svc.cluster.local
        subset: v1
        port:
          number: 80
