istio-vs-order.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: order-vs
spec:
  hosts:
    - "order.dev"
  gateways:
    - gateway
  http:
  - route:
    - destination:
        host: order-web # interpreted as order-web.default.svc.cluster.local
        port:
          number: 80
