istio-vs-payment.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: payment-vs
spec:
  hosts:
    - "payment.dev"
  gateways:
    - gateway
  http:
  - route:
    - destination:
        host: payment-web # interpreted as payment-web.default.svc.cluster.local
        port:
          number: 80
